# thinkelearn

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.dev  GEMINI.md  LICENSE  MAILTRAP_SETUP_COMPLETE.md  Makefile  RAILWAY_EMAIL_SETUP.md  README.md  conftest.py  deploy.sh  docker-compose.yml  manage.py  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railway.toml  requirements.txt  setup_production_pages.py  start.sh  tailwind.config.js  test_email.py  test_integration.py  test_mailtrap_backend.py  verify_deployment.py
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py
accounts/tests/: test_models.py
blog/: models.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_index_page.html  blog_page.html
blog/tests/: test_models.py
communications/: admin.py  models.py  urls.py  utils.py  views.py
communications/migrations/: 0001_initial.py  0002_smsmessage_assigned_to_smsmessage_followed_up_at_and_more.py
communications/templates/communications/: recording_player.html
communications/tests/: test_models.py  test_views.py
docs/: README-project-status.md  README.md  aws-s3-iam-setup.md  ci-cd-guide.md  coppa-compliance-quick-reference.md  coppa-pipeda-compliance-plan.md  coppa-pipeda-compliance.md  current-implementation-plan.md  development-status-update.md  django-background-tasks.md  docker-development.md  lms-implementation-plan.md  mailtrap-setup.md  payments.md  phase-2-enhancements.md  railway-commands.md  railway-deployment.md  stripe-frontend-integration.md  stripe-implementation-plan.md  stripe-local-testing.md  tailwind-css-guide.md  tailwind-setup.md  testing-guide.md  twilio-enhancements.md  twilio-integration.md  wagtail-models.md
docs/archive/: README-archive.md  README-project-status.md  README.md  ci-cd-plan.md  current-implementation-plan.md  development-status-update.md  lms-implementation-status-archived-2025-12-30.md  railway-deployment.md  site-plan.md  tailwind-setup.md  testing-guide.md  twilio-enhancements.md  wagtail-models.md
docs/archive/pr_25_review/: 00_holistic_review.md  01_security_review.md  04_deep_review.md  05_tests_review.md  11_brief_security.md  13_brief_accounting.md  14_brief_deep.md  15_brief_tests.md
docs/pr_25_review/: 03_accounting_review.md  10_brief_holistic.md  99_final_pr_review.md
home/: models.py
home/management/commands/: create_admin.py  setup_pages.py  shell.py
home/migrations/: 0003_alter_homepage_options_homepage_features_and_more.py  0004_aboutpage.py  0005_contactpage_contactformfield.py  0006_portfolioindexpage_projectcategory_projectpage.py  0007_homepage_features_description_and_more.py  0008_processpage.py  0009_remove_portfolio_models.py  0010_remove_processpage_process_content_and_more.py  0011_alter_processpage_process_sections.py  0012_remove_processpage.py
home/templates/home/: about_page.html  contact_page.html  contact_page_landing.html  home_page.html  portfolio_index_page.html  process_page.html  project_page.html
home/templatetags/: __init__.py  socialaccount_extras.py
home/tests/: test_commands.py  test_contact_spam.py  test_create_admin_command.py  test_models.py  test_navigation_integration.py  test_views.py
lms/: admin.py  apps.py  context_processors.py  emails.py  forms.py  h5p_upload.py  models.py  scorm_upload.py  services.py  signals.py  tests.py  views.py  wagtail_lms_admin.py
lms/management/commands/: revoke_expired_demo_invites.py  setup_lms.py  verify_wagtail_lms_upgrade.py
lms/migrations/: 0001_initial.py  0002_alter_coursereview_is_approved.py  0003_courseproduct_enrollmentrecord.py  0003_courseproduct_enrollmentrecord_and_more.py  0004_add_field_validators.py  0004_enrollmentrecord_stripe_ids.py  0004_refund_limits_and_reenroll.py  0005_alter_courseproduct_refund_window_days.py  0005_use_unique_constraints.py  0006_rename_duration_hours_to_minutes.py  0006_update_courseproduct_enrollmentrecord.py  0007_extendedcoursepage_visibility_clientdemoinvite_and_more.py
lms/templates/lms/: courses_index_page.html  demo_landing.html  extended_course_page.html  learner_dashboard_page.html
payments/: __init__.py  admin.py  apps.py  checks.py  emails.py  models.py  stripe_client.py  tasks.py  urls.py  views.py  webhooks.py
payments/management/commands/: cleanup_abandoned_enrollments.py
payments/migrations/: 0001_initial.py  0002_accounting_ledger.py  0003_ledger_constraints.py
payments/templates/payments/: checkout_cancel.html  checkout_failure.html  checkout_success.html  refund_request.html  refund_request_submitted.html  refund_request_unavailable.html
payments/tests/: test_checkout_flow.py  test_emails.py  test_error_handling.py  test_free_enrollment.py  test_frontend.py  test_models.py  test_tasks.py  test_webhooks.py
portfolio/: models.py  tests.py  urls.py  views.py
portfolio/management/: __init__.py
portfolio/management/commands/: __init__.py  setup_portfolio.py  setup_showcase.py
portfolio/migrations/: 0001_initial.py  0002_alter_projectpage_content_sections.py  0002_cleanup_and_create_portfolio.py  0002_projectpage_client_name_projectpage_is_client_work.py
portfolio/templates/portfolio/: portfolio_index_page.html  project_page.html
portfolio/templates/showcase/: showcase_index_page.html  showcase_page.html
scripts/: pr_review_llm.sh  s3_cors.sh  setup-ci-cd.sh  setup_minio.sh
showcase/: models.py  tests.py
showcase/migrations/: 0002_alter_showcasepage_content_sections.py
tests/: GALLERY_TESTING.md  test_gallery.py
thinkelearn/: celery.py  context_processors.py  urls.py  views.py  wsgi.py
thinkelearn/backends/: allauth.py  mailtrap.py  storage.py
thinkelearn/settings/: base.py  dev.py  production.py  test.py
thinkelearn/templates/: 403.html  404.html  base.html  parent_help.html  privacy.html  terms.html
thinkelearn/tests/: __init__.py  test_account_adapter.py  test_account_templates.py  test_oauth_only_auth.py  test_social_adapter.py  test_storage_backend.py
(+49 files in other folders)
