[project]
name = "thinkelearn"
version = "0.1.0"
description = "THINK eLearn"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.0.0",
    "django-storages[s3]>=1.14.6",
    "gunicorn>=23.0.0",
    "psycopg>=3.2.9",
    "sentry-sdk[django]>=2.31.0",
    "twilio>=9.6.3",
    "wagtail>=7.0.1",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
